make vis1 svg canvas scale, solves controls overflowing to below vis but disables zomming in/out on vis

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.vis {
+  width:80%;
+  height:auto;
+}
+
 .tooltip {
   position: absolute;
   width: 150px;
@@ -11,7 +16,7 @@
     border-radius: 20px;
 }
 
-div{
+div {
     display: inline-block;
     vertical-align: top;
     padding-top: 10px;
